2015-01-16  Beth Dakin  <bdakin@apple.com>

        Make sure early cancellation of immediate action actually does that in WK1
        https://bugs.webkit.org/show_bug.cgi?id=140566
        -and corresponding-
        rdar://problem/19490114

        Reviewed by Tim Horton.

        Work around an AppKit bug by dispatching the call to _cancelImmediateAction 
        asynchronously.
        * WebView/WebImmediateActionController.mm:
        (-[WebImmediateActionController immediateActionRecognizerWillPrepare:]):

2015-01-16  Daniel Bates  <dabates@apple.com>

        Fix the public iOS SDK build after <http://trac.webkit.org/changeset/178285>
        (https://bugs.webkit.org/show_bug.cgi?id=140360)

        Forward declare protocol NSURLDownloadDelegate as it is SPI on iOS.

        * Misc/WebDownload.h:

2015-01-15  Csaba Osztrogonác  <ossy@webkit.org>

        Remove ENABLE(SQL_DATABASE) guards
        https://bugs.webkit.org/show_bug.cgi?id=140434

        Reviewed by Darin Adler.

        * Configurations/FeatureDefines.xcconfig:
        * Storage/WebDatabaseManager.mm:
        (databasesDirectoryPath):
        * Storage/WebDatabaseManagerClient.h:
        * Storage/WebDatabaseManagerClient.mm:
        * Storage/WebDatabaseManagerInternal.h:
        * Storage/WebDatabaseManagerPrivate.h:
        * Storage/WebDatabaseQuotaManager.mm:
        (-[WebDatabaseQuotaManager usage]):
        (-[WebDatabaseQuotaManager quota]):
        (-[WebDatabaseQuotaManager setQuota:]):
        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebChromeClient.mm:
        * WebCoreSupport/WebSecurityOrigin.mm:
        (-[WebSecurityOrigin usage]):
        (-[WebSecurityOrigin quota]):
        (-[WebSecurityOrigin setQuota:]):
        * WebView/WebFrame.mm:
        (-[WebFrame _cacheabilityDictionary]):
        * WebView/WebView.mm:
        (-[WebView _commonInitializationWithFrameName:groupName:]):
        (-[WebView _preferencesChanged:]):
